# ChangeLog for gnome-base/libglade
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-base/libglade/ChangeLog,v 1.130 2009/10/11 02:46:15 leio Exp $

  11 Oct 2009; Mart Raudsepp <leio@gentoo.org> -libglade-2.6.3.ebuild:
  Remove old

  09 Oct 2009; Raúl Porcel <armin76@gentoo.org> libglade-2.6.4.ebuild:
  arm/ia64/sh/sparc stable wrt #280814

  15 Sep 2009; Jeroen Roovers <jer@gentoo.org> libglade-2.6.4.ebuild:
  Stable for HPPA (bug #280814).

  06 Sep 2009; Brent Baude <ranger@gentoo.org> libglade-2.6.4.ebuild:
  Marking libglade-2.6.4 ppc64 for bug 280814

  29 Aug 2009; nixnut <nixnut@gentoo.org> libglade-2.6.4.ebuild:
  ppc stable #280814

  29 Aug 2009; Tobias Klausmann <klausman@gentoo.org> libglade-2.6.4.ebuild:
  Stable on alpha, bug #280814

  14 Aug 2009; Markus Meier <maekke@gentoo.org> libglade-2.6.4.ebuild:
  amd64/x86 stable, bug #280814

*libglade-2.6.4 (18 Mar 2009)

  18 Mar 2009; Gilles Dartiguelongue <eva@gentoo.org>
  files/Makefile.in.am-2.4.2-xmlcatalog.patch,
  files/libglade-2.6.3-fix_tests-page_size.patch, +libglade-2.6.4.ebuild:
  Bump to 2.6.4. Code cleanup and build fixes for single includes.

  05 Jan 2009; Gilles Dartiguelongue <eva@gentoo.org>
  -libglade-2.6.1.ebuild, -libglade-2.6.2.ebuild:
  Clean up old revisions.

  04 Jan 2009; Raúl Porcel <armin76@gentoo.org> libglade-2.6.3.ebuild:
  arm/sh stable wrt #238872

  04 Oct 2008; Brent Baude <ranger@gentoo.org> libglade-2.6.3.ebuild:
  stable ppc64, bug 238872

  02 Oct 2008; Brent Baude <ranger@gentoo.org> libglade-2.6.3.ebuild:
  stable ppc, bug 238872

  02 Oct 2008; Raúl Porcel <armin76@gentoo.org> libglade-2.6.3.ebuild:
  alpha/ia64/sparc stable wrt #238872

  30 Sep 2008; Jeroen Roovers <jer@gentoo.org> libglade-2.6.3.ebuild:
  Stable for HPPA (bug #238872).

  28 Sep 2008; Markus Meier <maekke@gentoo.org> libglade-2.6.3.ebuild:
  amd64/x86 stable, bug #238872

  27 Sep 2008; Mart Raudsepp <leio@gentoo.org>