@@ -1,6 +1,6 @@
 AUX Makefile.in.am-2.4.2-xmlcatalog.patch 1121 RMD160 335fdf3b35fd95e1a9b2b683d14a9f95b24af32c SHA1 33eda915f031f6797f393447d76b1d44da6886ae SHA256 a2132d94f5b5e234b905f4a629c1a3c54cf93fbd4a6dc791f5699a731c41a0fb
 AUX libglade-2.6.3-fix_tests-page_size.patch 369 RMD160 5aea3a51f6619fddf324e27370643d413be9eab0 SHA1 aea59f9885b7dda8b636a87fc00ea92ed1880d27 SHA256 97342a2d5bdf561d145950f5609d96a097ed2903e6c229f671b15d7d704248f2
 DIST libglade-2.6.4.tar.bz2 356119 RMD160 516a43543e518a319ca9b35556ca1ac88e2ce8fb SHA1 8465851733b8a0efbe57c43efc0f140d8e2d2edb SHA256 64361e7647839d36ed8336d992fd210d3e8139882269bed47dc4674980165dec
-EBUILD libglade-2.6.4.ebuild 1900 RMD160 b678c0151c801d4369b0a1e09e5c0e83b8884ea6 SHA1 d810e47cb401e8cfe6c06e82f94f9817220dbf83 SHA256 d2eb5b7e9fc05313f9e125b7849a0c4fe21bd87878c0d69d43607ea7969f6098
-MISC ChangeLog 15646 RMD160 64fd9e8e5a7d4afee36f3c8bf3df4ed42cb109d7 SHA1 ea1ce03e7407f968d87b1e7a0505e6802998cada SHA256 16b2f975d446db68e8e022edb938938751df349b4a9c0311aba6def7ba40d85a
+EBUILD libglade-2.6.4.ebuild 2111 RMD160 725e0fa8d4bc401b1ff2bdc5ea7f8b16bc7362e4 SHA1 ef4c6e7bec42584ed9b1ab8279ebbf021662c8b8 SHA256 a232de212841914f7eda61becbfdd0fcf7180cefb2e29d4a37e3794a9c40da6e
+MISC ChangeLog 16015 RMD160 f8a8e3fd7e9396c643e9f33d4d37fae9b1d1e467 SHA1 f1470ff3d96848651ab64c5bc649ea755ecaa5d1 SHA256 a3682d3ee34a131aecf06e1ec7758243746a95dcfa39378499a174fa0cb536b3
 MISC metadata.xml 158 RMD160 c0e2bae8e91bb6be8922bac5e4f597302e06587e SHA1 38f78e9790bcd4382b4a49aa226aa6dda1d3a3d7 SHA256 3a7dbca0fdc557de69783e0663e2d76ddab129ea8a19b2d0ef6d3e5d1b947ce1
