@@ -1,38 +1,33 @@
-# Copyright 1999-2009 Gentoo Foundation
+# Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/libglade/libglade-2.6.4.ebuild,v 1.7 2009/10/09 18:25:07 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/libglade/libglade-2.6.4.ebuild,v 1.9 2011/01/27 11:49:02 pacho Exp $
 
-EAPI=2
+EAPI="3"
+GCONF_DEBUG="no"
+PYTHON_DEPEND="2"
 
-inherit eutils gnome2 autotools flag-o-matic
+inherit eutils gnome2 python autotools flag-o-matic
 
 DESCRIPTION="Library to construct graphical interfaces at runtime"
-HOMEPAGE="http://www.gnome.org/"
+HOMEPAGE="http://library.gnome.org/devel/libglade/stable/"
 
 LICENSE="LGPL-2"
 SLOT="2.0"
 KEYWORDS="~x86-interix ~amd64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~sparc-solaris ~x64-solaris ~x86-solaris"
-IUSE="doc"
+IUSE="doc test"
 
-RDEPEND=">=dev-libs/glib-2.10
-	>=x11-libs/gtk+-2.8.10
+RDEPEND=">=dev-libs/glib-2.10:2
+	>=x11-libs/gtk+-2.8.10:2
 	>=dev-libs/atk-1.9
-	>=dev-libs/libxml2-2.4.10
-	>=dev-lang/python-2.0-r7"
+	>=dev-libs/libxml2-2.4.10"
 DEPEND="${RDEPEND}
 	>=dev-util/pkgconfig-0.9
 	gnome-base/gnome-common
 	doc? ( >=dev-util/gtk-doc-1 )"
 
-DOCS="AUTHORS ChangeLog NEWS README"
-
-src_unpack() {
-	gnome2_src_unpack
-
-	AT_M4DIR=m4 eautoreconf # need new libtool for interix
-	
-	# Needed for solaris, else gcc finds a syntax error in /usr/include/signal.h
-	[[ ${CHOST} == *-solaris* ]] && append-flags "-D__EXTENSIONS__"
+pkg_setup() {
+	DOCS="AUTHORS ChangeLog NEWS README"
+	python_set_active_version 2
 }
 
 src_prepare() {
@@ -42,11 +37,21 @@ src_prepare() {
 
 	# patch to not throw a warning with gtk+-2.14 during tests, as it triggers abort
 	epatch "${FILESDIR}/${PN}-2.6.3-fix_tests-page_size.patch"
+
+	if ! use test; then
+		sed 's/ tests//' -i Makefile.am Makefile.in || die "sed failed"
+	fi
+
+	AT_M4DIR=m4 eautoreconf # need new libtool for interix
+
+	# Needed for solaris, else gcc finds a syntax error in /usr/include/signal.h
+	[[ ${CHOST} == *-solaris* ]] && append-flags "-D__EXTENSIONS__"
 }
 
 src_install() {
 	dodir /etc/xml
 	gnome2_src_install
+	python_convert_shebangs 2 "${ED}"/usr/bin/libglade-convert
 }
 
 pkg_postinst() {
